--- a/index.html
+++ b/index.html
@@ -65,29 +65,49 @@
         <label class="label">Nama Pengguna</label>
         <div class="control">
           <div class="select is-fullwidth">
-            <select name="Nama_Pengguna" required>
-              <option value="">-- Sila Pilih Nama Pengguna --</option>
-              <option>Aisyah Binti Zulkifli</option>
-              <option>Muhammad Firdaus Bin Hamdan</option>
-              <option>Noraini Binti Kassim</option>
-              <option>Ahmad Hakim Bin Roslan</option>
-              <option>Farah Liyana Binti Rahim</option>
-              <option>Syafiq Bin Azmi</option>
-              <option>Nurul Huda Binti Karim</option>
-              <option>Khairul Anwar Bin Hassan</option>
-              <option>Siti Nabila Binti Mahmud</option>
-              <option>Zainal Bin Ismail</option>
-              <option>Hafizah Binti Talib</option>
-              <option>Danial Bin Idris</option>
-              <option>Maisarah Binti Jamal</option>
-              <option>Azlan Bin Fauzi</option>
-              <option>Izzati Binti Omar</option>
-              <option>Luqman Bin Salleh</option>
-              <option>Wan Nadiah Binti Ariffin</option>
-              <option>Faizal Bin Ibrahim</option>
-              <option>Hani Binti Yusuf</option>
-              <option>Shahrul Bin Mokhtar</option>
-            </select>
+         <select name="Nama_Pengguna" required>
+  <option value="">-- Sila Pilih Nama Pengguna --</option>
+  <option>MOHAMAD ASWANDI BIN ARIFF</option>
+  <option>MOHD FUZI BIN HASHIM (KU)</option>
+  <option>MOHD FAHAMI BIN ABAS (KU)</option>
+  <option>PASUPATI A/L SUBRAMANIAM</option>
+  <option>SHARIZAN BIN IBRAHIM</option>
+  <option>AZRUL BIN ARIFFIN</option>
+  <option>MOHD ZAHAR BIN IBRAHIM</option>
+  <option>NURUL HUSNA BINTI ISMAYATIM</option>
+  <option>AKRIMI MASUA BINTI MOHAMAD</option>
+  <option>MOHAMMAD NUR HAFIZ BIN HAMID</option>
+  <option>TAMILARASI A/P GANASAN</option>
+  <option>MARIHAM BINTI YAACOB</option>
+  <option>NAZILAH BINTI AHMAD NAZRI</option>
+  <option>KHATIB BIN MD YAN</option>
+  <option>ABDUL RANI BIN ABU BAKAR</option>
+  <option>FAHIMAH ZAIDAH BINTI ZAINUL ABIDIN</option>
+  <option>SURAYA BINTI ABDULLAH SANI</option>
+  <option>SAEDA A/P ANJANG</option>
+  <option>WAN MOHD SUBRI BIN WAN ABDULLAH</option>
+  <option>MUHAMAD ARIF BIN ABDUL KARIM</option>
+  <option>WAN ERDALINA BINTI WAN DALI</option>
+  <option>AMIRUL ZAKI BIN ISHAK</option>
+  <option>AMIRUL ZAHIM BIN MD ZAKARIA</option>
+  <option>MAJDI BIN BALI</option>
+  <option>CLYDERICK BONAVENTURE</option>
+  <option>SURAYA BINTI ANUAR</option>
+  <option>NUR AMIRAH IZZATI BINTI MAT AROP</option>
+  <option>FAKHRUL ANWAR BIN NOOR ARMAN</option>
+  <option>SITI YUS SYAFEERA BINTI SAPUAN</option>
+  <option>NUR ADILAH BINTI MAT NOR</option>
+  <option>RUBENS CHIA</option>
+  <option>WAN MOHD FAIZ BIN WAN MASRI</option>
+  <option>NUR EFFA IZATI BINTI ABDUL HAMID</option>
+  <option>SYAHRUL NIZAM BIN MOHD ZURAINI</option>
+  <option>SAIFUL BAHARIL BIN ABU BAKAR</option>
+  <option>RASHID BIN SHAPEE</option>
+  <option>MOHAMAD HANIF BIN MUSLIMAN</option>
+  <option>MOHD EZRULFAZLY BIN LEMAN</option>
+  <option>FARAH NADIRAH BINTI SHALUDIN</option>
+</select>
+
           </div>
         </div>
       </div>
@@ -310,3 +330,4 @@
     </script>
   </body>
 </html>
+
