--- a/index.html
+++ b/index.html
@@ -127,36 +127,126 @@
       </div>
 
       <div class="field">
-        <label class="label">Kod Item</label>
-        <div class="control">
-          <div class="select is-fullwidth">
-            <select name="Kod_Item" required>
-              <option value="">-- Sila Pilih Kod Item --</option>
-              <option>AC001</option><option>AC002</option><option>AC003</option><option>AC004</option><option>AC005</option><option>AC006</option><option>AC007</option><option>AC008</option>
-              <option>SA001</option><option>SA002</option><option>SA003</option><option>SA004</option><option>SA005</option><option>SA006</option><option>SA007</option><option>SA008</option>
-              <option>PPE001</option><option>PPE002</option><option>PPE003</option><option>PPE004</option><option>PPE005</option><option>PPE006</option><option>PPE007</option><option>PPE008</option>
-              <option>EQ001</option><option>EQ002</option><option>EQ003</option><option>EQ004</option><option>EQ005</option><option>EQ006</option><option>EQ007</option><option>EQ008</option>
-              <option>SUP001</option><option>SUP002</option><option>SUP003</option><option>SUP004</option><option>SUP005</option><option>SUP006</option><option>SUP007</option><option>SUP008</option>
-            </select>
-          </div>
-        </div>
-      </div>
+  <label class="label">Kod Item</label>
+  <div class="control">
+    <div class="select is-fullwidth">
+      <select name="Kod_Item" required>
+        <option value="">-- Sila Pilih Kod Item --</option>
+        <option>ACID001</option><option>ACID002</option><option>ACID003</option><option>ACID004</option><option>ACID005</option><option>ACID006</option><option>ACID007</option><option>ACID008</option>
+        <option>ALC001</option><option>ALC002</option><option>ALC003</option><option>ALC004</option><option>ALC005</option><option>ALC006</option><option>ALC007</option><option>ALC008</option>
+        <option>KET001</option><option>KET002</option><option>KET003</option>
+        <option>IND001</option><option>IND002</option><option>IND003</option><option>IND004</option><option>IND005</option>
+        <option>OXI001</option><option>OXI002</option><option>OXI003</option><option>OXI004</option><option>OXI005</option>
+        <option>STD001</option><option>STD002</option><option>STD003</option><option>STD004</option><option>STD005</option><option>STD006</option><option>STD007</option><option>STD008</option><option>STD009</option><option>STD010</option><option>STD011</option><option>STD012</option><option>STD013</option><option>STD014</option><option>STD015</option><option>STD016</option><option>STD017</option><option>STD018</option><option>STD019</option><option>STD020</option><option>STD021</option><option>STD022</option><option>STD023</option><option>STD024</option>
+        <option>OTH001</option><option>OTH002</option><option>OTH003</option><option>OTH004</option><option>OTH005</option><option>OTH006</option><option>OTH007</option><option>OTH008</option>
+      </select>
+    </div>
+  </div>
+</div>
 
-      <div class="field">
-        <label class="label">Nama Item</label>
-        <div class="control">
-          <div class="select is-fullwidth">
-            <select name="Nama_Item" required>
-              <option value="">--  Nama Item --</option>
-              <option>Asid Hidroklorik</option><option>Asid Sulfurik</option><option>Asid Nitrik</option><option>Asid Asetik</option><option>Asid Triklorasetik</option><option>Asid Formik</option><option>Asid Perklorik</option><option>Asid Fosforik</option>
-              <option>Natrium Klorida</option><option>Kalium Nitrat</option><option>Natrium Sulfat</option><option>Plumbum(II) Nitrat</option><option>Kalsium Karbonat</option><option>Magnesium Sulfat</option><option>Ferum(III) Klorida</option><option>Kuprum(II) Sulfat</option>
-              <option>Sarung tangan nitril</option><option>Goggles keselamatan</option><option>Mask muka 3 lapis</option><option>Apron makmal</option><option>Pelindung muka penuh</option><option>Penutup kepala</option><option>Kasut keselamatan</option><option>Pelindung lengan</option>
-              <option>Beaker</option><option>Pipet Volumetrik</option><option>Tabung uji</option><option>Buret</option><option>Penimbang digital</option><option>Silinder penyukat</option><option>Penunu Bunsen</option><option>Rak tabung uji</option>
-              <option>Etanol 70%</option><option>Botol semburan</option><option>Pemadam api</option><option>Natrium Hipoklorit</option><option>Bahan penyerap tumpahan</option><option>Kotak keselamatan bahan kimia</option><option>Pelabelan bahan kimia</option><option>Jadual pengurusan luput</option>
-            </select>
-          </div>
-        </div>
-      </div>
+<div class="field">
+  <label class="label">Nama Item</label>
+  <div class="control">
+    <div class="select is-fullwidth">
+      <select name="Nama_Item" required>
+        <option value="">-- Nama Item --</option>
+        <!-- Acids -->
+        <option>NITRIC ACID 69% 2.5 LITER</option>
+        <option>NITRIC ACID 68% 2.5 LITER</option>
+        <option>NITRIC ACID 65% 2.5 LITER</option>
+        <option>NITRIC ACID 65% 1 LITER</option>
+        <option>HYDROCHLORIC ACID 37% 2.5LITER</option>
+        <option>HYDROCHLORIC ACID CARBOY 33% 25LITER</option>
+        <option>HYDROFLUORIC ACID 49% 2.5LITER</option>
+        <option>HYDROFLUORIC ACID 48% 2.5LITER</option>
+        <option>SULFURIC ACID 98% 2.5LITER</option>
+        <option>SULFURIC ACID 95-97% 2.5LITER</option>
+        <option>ORTHO PHOSPHORIC ACID 85% 2.5LITER</option>
+        <option>SULFUROUS ACID 5-6% 2.5LITER</option>
+        <option>PERCHLORIC ACID 70-72% 2.5LITER</option>
+        <option>PERCHLORIC ACID 70% 2.5LITER</option>
+        <option>HYDROBROMIC ACID 48-50%</option>
+        <option>ACETIC ACID GLACIAL 99.8% 2.5LITER</option>
+        <option>ACETIC ACID GLACIAL CARBOY 99.8% 25 LITER</option>
+        <option>THIOGLYCOLIC ACID 1KG</option>
+        <option>MERCAPTOACETIC ACID 98%</option>
+        <option>ACETIC ANHYDRIDE</option>
+
+        <!-- Alcohols & Solvents -->
+        <option>ETHANOL 99.8% 2.5LITER</option>
+        <option>ETHANOL 70% 2.5LITER</option>
+        <option>ETHANOL ABSOLUTE 2.5L</option>
+        <option>ETHYL ALCOHOL 2.8 L</option>
+        <option>GLYCEROL 2.5 L</option>
+        <option>METHANOL 2.5L</option>
+        <option>METHYL ALCOHOL ANHYDROUS 4L</option>
+        <option>AMYL ALCOHOL</option>
+        <option>1-BUTANOL</option>
+        <option>2-METHYLBUTAN-2-O1</option>
+        <option>BENZENE</option>
+        <option>DIETHYLETHER 99%</option>
+
+        <!-- Ketones & Aldehydes -->
+        <option>ACETONE 2.5 LITER</option>
+        <option>ACETONE 25 LITER</option>
+        <option>FORMALDEHYDE SOLUTION MIN 37% 2.5L</option>
+
+        <!-- Indicators -->
+        <option>4-AMINO-3-HYDROXYL-1-NAPTHALINSULFONIC ACID</option>
+        <option>BARIUM DIPHENYLAMINE SULFONIC INDICATOR, 0.2%</option>
+        <option>FERRIC INDICATOR SOLUTION</option>
+        <option>BROMOCRESOL GREEN SOLN. 0.2G/100ML</option>
+        <option>4% PHENOLPHTHALEIN 4G/100ML</option>
+
+        <!-- Peroxides & Oxidizers -->
+        <option>HYDROGEN PEROXIDE 3%</option>
+        <option>HYDROGEN PEROXIDE 30% 1 LITER</option>
+        <option>HYDROGEN PEROXIDE 30%</option>
+        <option>POTTASIUM PERMANGANATE</option>
+        <option>SODIUM HYPOCHLORITE SOLUTION 15%</option>
+
+        <!-- Standards & Elements -->
+        <option>LEAD STANDARD, 1000PPM</option>
+        <option>TIN STANDARD, 1000PPM</option>
+        <option>MANGANESE STANDARD, 1000PPM</option>
+        <option>CALCIUM,1000PPM</option>
+        <option>CADMIUM, 1000PPM</option>
+        <option>ALUMINIUM, 1000PPM</option>
+        <option>MANGANESE, 1000PPM</option>
+        <option>LEAD, 1000PPM</option>
+        <option>CHROMIUM, 1000PPM</option>
+        <option>MERKURI, 1000PPM</option>
+        <option>ARSENIC, 1000PPM</option>
+        <option>SILVER, 1000PPM</option>
+        <option>IRON, 1000PPM</option>
+        <option>TITANIUM, 1000PPM</option>
+        <option>POTTASIUM, 1000PPM</option>
+        <option>ZINC, 1000PPM</option>
+        <option>SILICON, 1000PPM</option>
+        <option>NICKEL, 1000PPM</option>
+        <option>SODIUM, 1000PPM</option>
+        <option>COPPER,1000PPM</option>
+        <option>PHOSPOROUS, 1000PPM</option>
+        <option>SELENIUM, 1000PPM</option>
+        <option>TIN, 1000PPM</option>
+        <option>ZIRCONIUM, 1000PPM</option>
+        <option>MAGNESIUM, 1000PPM</option>
+        <option>AU,AG,CU,ZN,NI,FE 100PPM</option>
+
+        <!-- Others -->
+        <option>AMMONIA SOLUTION 25% 2.5LITER</option>
+        <option>POLYETHOXY CHAIN</option>
+        <option>PYRIDINE 2.5 LITTER</option>
+        <option>PETROLEUM SPIRIT 40-60</option>
+        <option>n-HEXANE 2.5 L</option>
+        <option>DICHLOROMETHANE 2.5L</option>
+        <option>ETHYLENE GLYEOL 2.5 L</option>
+        <option>3,5,5-TRIMETHYL-1-HEXANOL TECHN 85%</option>
+      </select>
+    </div>
+  </div>
+</div>
+
 
       <div class="field">
         <label class="label">Kuantiti</label>
@@ -330,4 +420,5 @@
     </script>
   </body>
 </html>
+
 
