--- a/index.html
+++ b/index.html
@@ -130,18 +130,37 @@
   <label class="label">Kod Item</label>
   <div class="control">
     <div class="select is-fullwidth">
-      <select name="Kod_Item" required>
-        <option value="">-- Sila Pilih Kod Item --</option>
-        <option>ACID001</option><option>ACID002</option><option>ACID003</option><option>ACID004</option><option>ACID005</option><option>ACID006</option><option>ACID007</option><option>ACID008</option>
-        <option>ALC001</option><option>ALC002</option><option>ALC003</option><option>ALC004</option><option>ALC005</option><option>ALC006</option><option>ALC007</option><option>ALC008</option>
-        <option>KET001</option><option>KET002</option><option>KET003</option>
-        <option>IND001</option><option>IND002</option><option>IND003</option><option>IND004</option><option>IND005</option>
-        <option>OXI001</option><option>OXI002</option><option>OXI003</option><option>OXI004</option><option>OXI005</option>
-        <option>STD001</option><option>STD002</option><option>STD003</option><option>STD004</option><option>STD005</option><option>STD006</option><option>STD007</option><option>STD008</option><option>STD009</option><option>STD010</option><option>STD011</option><option>STD012</option><option>STD013</option><option>STD014</option><option>STD015</option><option>STD016</option><option>STD017</option><option>STD018</option><option>STD019</option><option>STD020</option><option>STD021</option><option>STD022</option><option>STD023</option><option>STD024</option>
-        <option>OTH001</option><option>OTH002</option><option>OTH003</option><option>OTH004</option><option>OTH005</option><option>OTH006</option><option>OTH007</option><option>OTH008</option>
-      </select>
-    </div>
-  </div>
+ <select name="Kod_Item" required>
+  <option value="">-- Sila Pilih Kod Item --</option>
+  <!-- Acids -->
+  <option>ACID001</option><option>ACID002</option><option>ACID003</option><option>ACID004</option><option>ACID005</option><option>ACID006</option><option>ACID007</option><option>ACID008</option>
+  <!-- Alcohols -->
+  <option>ALC001</option><option>ALC002</option><option>ALC003</option><option>ALC004</option><option>ALC005</option><option>ALC006</option><option>ALC007</option><option>ALC008</option>
+  <!-- Ketones -->
+  <option>KET001</option><option>KET002</option><option>KET003</option>
+  <!-- Indicators -->
+  <option>IND001</option><option>IND002</option><option>IND003</option><option>IND004</option><option>IND005</option>
+  <!-- Oxidizers -->
+  <option>OXI001</option><option>OXI002</option><option>OXI003</option><option>OXI004</option><option>OXI005</option>
+  <!-- Standards -->
+  <option>STD001</option><option>STD002</option><option>STD003</option><option>STD004</option><option>STD005</option><option>STD006</option><option>STD007</option><option>STD008</option><option>STD009</option><option>STD010</option><option>STD011</option><option>STD012</option><option>STD013</option><option>STD014</option><option>STD015</option><option>STD016</option><option>STD017</option><option>STD018</option><option>STD019</option><option>STD020</option><option>STD021</option><option>STD022</option><option>STD023</option><option>STD024</option>
+  <!-- Others (original) -->
+  <option>OTH001</option><option>OTH002</option><option>OTH003</option><option>OTH004</option><option>OTH005</option><option>OTH006</option><option>OTH007</option><option>OTH008</option>
+  <!-- Cleaning -->
+  <option>CLN001</option><option>CLN002</option><option>CLN003</option><option>CLN004</option><option>CLN005</option><option>CLN006</option><option>CLN007</option><option>CLN008</option>
+  <!-- PPE -->
+  <option>PPE001</option><option>PPE002</option><option>PPE003</option>
+  <!-- Brushes -->
+  <option>BRU001</option><option>BRU002</option><option>BRU003</option><option>BRU004</option><option>BRU005</option><option>BRU006</option>
+  <!-- Lab -->
+  <option>LAB001</option><option>LAB002</option><option>LAB003</option><option>LAB004</option><option>LAB005</option><option>LAB006</option>
+  <!-- Stickers -->
+  <option>STK001</option><option>STK002</option><option>STK003</option>
+  <!-- Other Equipment -->
+  <option>OTH009</option><option>OTH010</option><option>OTH011</option><option>OTH012</option><option>OTH013</option><option>OTH014</option><option>OTH015</option>
+</select>
+</div>
+</div>
 </div>
 
 <div class="field">
@@ -150,6 +169,7 @@
     <div class="select is-fullwidth">
       <select name="Nama_Item" required>
         <option value="">-- Nama Item --</option>
+
         <!-- Acids -->
         <option>NITRIC ACID 69% 2.5 LITER</option>
         <option>NITRIC ACID 68% 2.5 LITER</option>
@@ -233,7 +253,7 @@
         <option>MAGNESIUM, 1000PPM</option>
         <option>AU,AG,CU,ZN,NI,FE 100PPM</option>
 
-        <!-- Others -->
+        <!-- Others (original) -->
         <option>AMMONIA SOLUTION 25% 2.5LITER</option>
         <option>POLYETHOXY CHAIN</option>
         <option>PYRIDINE 2.5 LITTER</option>
@@ -242,10 +262,56 @@
         <option>DICHLOROMETHANE 2.5L</option>
         <option>ETHYLENE GLYEOL 2.5 L</option>
         <option>3,5,5-TRIMETHYL-1-HEXANOL TECHN 85%</option>
+
+        <!-- Cleaning -->
+        <option>Baldi</option>
+        <option>Bahan Pencuci (Jenis serbuk)</option>
+        <option>Bahan Pencuci (Cecair)</option>
+        <option>Pencuci tangan Dettol</option>
+        <option>Hand Sanitizer</option>
+        <option>Tuala Good Morning</option>
+        <option>Plastic sampah</option>
+        <option>Mop</option>
+
+        <!-- PPE -->
+        <option>Apron plastik</option>
+        <option>Sarung tangan getah kuning</option>
+        <option>Eye wash</option>
+
+        <!-- Brushes -->
+        <option>Berus M.G Chemical</option>
+        <option>Copper wire brush (tembaga)</option>
+        <option>Brass wire brush</option>
+        <option>Justman brush</option>
+        <option>Berus Cat (Catherine Brush)</option>
+        <option>Horse hair Brush</option>
+
+        <!-- Lab -->
+        <option>Spatula lab</option>
+        <option>Spatula straight edged</option>
+        <option>Sample Boat</option>
+        <option>Bulat Clay</option>
+        <option>Fisher brand Beaker tongs safety</option>
+        <option>Bulb Pipette 30ml</option>
+
+        <!-- Stickers -->
+        <option>Stiker Putih Pendaftaran Sampel MBA</option>
+        <option>Stiker Riben</option>
+        <option>Stiker Bulat</option>
+
+        <!-- Other Equipment -->
+        <option>Mini Drawer</option>
+        <option>Tayar Troli</option>
+        <option>Pemetik api</option>
+        <option>Eubiq plug Extention</option>
+        <option>Molykote</option>
+        <option>Container</option>
+        <option>Pembalut Plastik En. Bala</option>
       </select>
     </div>
   </div>
 </div>
+
 
 
       <div class="field">
@@ -420,5 +486,6 @@
     </script>
   </body>
 </html>
+
 
 
