--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Stor Makmal BPT 2025</title>
+  <title>Stor Makmal JMG BPT </title>
 
   <!-- Bulma -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"/>
@@ -306,7 +306,7 @@
         <option>Eubiq plug Extention</option>
         <option>Molykote</option>
         <option>Container</option>
-        <option>Pembalut Plastik En. Bala</option>
+        <option>Pembalut Plastik</option>
       </select>
     </div>
   </div>
@@ -486,6 +486,7 @@
     </script>
   </body>
 </html>
+
 
 
 
