--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <section class="hero is-primary is-bold">
     <div class="hero-body">
       <div class="container has-text-centered">
-        <h1 class="title">Stor Makmal BPT 2025</h1>
+        <h1 class="title">Stor Makmal JMG BPT</h1>
       </div>
     </div>
   </section>
@@ -486,6 +486,7 @@
     </script>
   </body>
 </html>
+
 
 
 
