--- a/index.html
+++ b/index.html
@@ -131,43 +131,36 @@
   <div class="control">
     <div class="select is-fullwidth">
  <select name="Kod_Item" required>
- <div class="field">
-  <label class="label">Kod Item</label>
-  <div class="control">
-    <div class="select is-fullwidth">
-      <select name="Kod_Item" required>
-        <option value="">-- Sila Pilih Kod Item --</option>
-        <option>ACID001</option><option>ACID002</option><option>ACID003</option><option>ACID004</option><option>ACID005</option>
-        <option>ACID006</option><option>ACID007</option><option>ACID008</option><option>ACID009</option><option>ACID010</option>
-        <option>ACID011</option><option>ACID012</option><option>ACID013</option><option>ACID014</option><option>ACID015</option>
-        <option>ACID016</option><option>ACID017</option><option>ACID018</option><option>ACID019</option><option>ACID020</option>
-        <option>ALC001</option><option>ALC002</option><option>ALC003</option><option>ALC004</option><option>ALC005</option>
-        <option>ALC006</option><option>ALC007</option><option>ALC008</option><option>ALC009</option><option>ALC010</option>
-        <option>ALC011</option><option>ALC012</option>
-        <option>KET001</option><option>KET002</option><option>KET003</option>
-        <option>IND001</option><option>IND002</option><option>IND003</option><option>IND004</option><option>IND005</option>
-        <option>OXI001</option><option>OXI002</option><option>OXI003</option><option>OXI004</option><option>OXI005</option>
-        <option>STD001</option><option>STD002</option><option>STD003</option><option>STD004</option><option>STD005</option>
-        <option>STD006</option><option>STD007</option><option>STD008</option><option>STD009</option><option>STD010</option>
-        <option>STD011</option><option>STD012</option><option>STD013</option><option>STD014</option><option>STD015</option>
-        <option>STD016</option><option>STD017</option><option>STD018</option><option>STD019</option><option>STD020</option>
-        <option>STD021</option><option>STD022</option><option>STD023</option><option>STD024</option><option>STD025</option>
-        <option>STD026</option>
-        <option>OTH001</option><option>OTH002</option><option>OTH003</option><option>OTH004</option>
-        <option>OTH005</option><option>OTH006</option><option>OTH007</option><option>OTH008</option>
-        <option>CLN001</option><option>CLN002</option><option>CLN003</option><option>CLN004</option>
-        <option>CLN005</option><option>CLN006</option><option>CLN007</option><option>CLN008</option>
-        <option>PPE001</option><option>PPE002</option><option>PPE003</option>
-        <option>BRU001</option><option>BRU002</option><option>BRU003</option><option>BRU004</option>
-        <option>BRU005</option><option>BRU006</option>
-        <option>LAB001</option><option>LAB002</option><option>LAB003</option><option>LAB004</option>
-        <option>LAB005</option><option>LAB006</option>
-        <option>STK001</option><option>STK002</option><option>STK003</option>
-        <option>OTH009</option><option>OTH010</option><option>OTH011</option><option>OTH012</option>
-        <option>OTH013</option><option>OTH014</option><option>OTH015</option>
-      </select>
-    </div>
-  </div>
+  <option value="">-- Sila Pilih Kod Item --</option>
+  <!-- Acids -->
+  <option>ACID001</option><option>ACID002</option><option>ACID003</option><option>ACID004</option><option>ACID005</option><option>ACID006</option><option>ACID007</option><option>ACID008</option>
+  <!-- Alcohols -->
+  <option>ALC001</option><option>ALC002</option><option>ALC003</option><option>ALC004</option><option>ALC005</option><option>ALC006</option><option>ALC007</option><option>ALC008</option>
+  <!-- Ketones -->
+  <option>KET001</option><option>KET002</option><option>KET003</option>
+  <!-- Indicators -->
+  <option>IND001</option><option>IND002</option><option>IND003</option><option>IND004</option><option>IND005</option>
+  <!-- Oxidizers -->
+  <option>OXI001</option><option>OXI002</option><option>OXI003</option><option>OXI004</option><option>OXI005</option>
+  <!-- Standards -->
+  <option>STD001</option><option>STD002</option><option>STD003</option><option>STD004</option><option>STD005</option><option>STD006</option><option>STD007</option><option>STD008</option><option>STD009</option><option>STD010</option><option>STD011</option><option>STD012</option><option>STD013</option><option>STD014</option><option>STD015</option><option>STD016</option><option>STD017</option><option>STD018</option><option>STD019</option><option>STD020</option><option>STD021</option><option>STD022</option><option>STD023</option><option>STD024</option>
+  <!-- Others (original) -->
+  <option>OTH001</option><option>OTH002</option><option>OTH003</option><option>OTH004</option><option>OTH005</option><option>OTH006</option><option>OTH007</option><option>OTH008</option>
+  <!-- Cleaning -->
+  <option>CLN001</option><option>CLN002</option><option>CLN003</option><option>CLN004</option><option>CLN005</option><option>CLN006</option><option>CLN007</option><option>CLN008</option>
+  <!-- PPE -->
+  <option>PPE001</option><option>PPE002</option><option>PPE003</option>
+  <!-- Brushes -->
+  <option>BRU001</option><option>BRU002</option><option>BRU003</option><option>BRU004</option><option>BRU005</option><option>BRU006</option>
+  <!-- Lab -->
+  <option>LAB001</option><option>LAB002</option><option>LAB003</option><option>LAB004</option><option>LAB005</option><option>LAB006</option>
+  <!-- Stickers -->
+  <option>STK001</option><option>STK002</option><option>STK003</option>
+  <!-- Other Equipment -->
+  <option>OTH009</option><option>OTH010</option><option>OTH011</option><option>OTH012</option><option>OTH013</option><option>OTH014</option><option>OTH015</option>
+</select>
+</div>
+</div>
 </div>
 
 <div class="field">
@@ -176,6 +169,8 @@
     <div class="select is-fullwidth">
       <select name="Nama_Item" required>
         <option value="">-- Nama Item --</option>
+
+        <!-- Acids -->
         <option>NITRIC ACID 69% 2.5 LITER</option>
         <option>NITRIC ACID 68% 2.5 LITER</option>
         <option>NITRIC ACID 65% 2.5 LITER</option>
@@ -196,6 +191,8 @@
         <option>THIOGLYCOLIC ACID 1KG</option>
         <option>MERCAPTOACETIC ACID 98%</option>
         <option>ACETIC ANHYDRIDE</option>
+
+        <!-- Alcohols & Solvents -->
         <option>ETHANOL 99.8% 2.5LITER</option>
         <option>ETHANOL 70% 2.5LITER</option>
         <option>ETHANOL ABSOLUTE 2.5L</option>
@@ -208,23 +205,31 @@
         <option>2-METHYLBUTAN-2-O1</option>
         <option>BENZENE</option>
         <option>DIETHYLETHER 99%</option>
+
+        <!-- Ketones & Aldehydes -->
         <option>ACETONE 2.5 LITER</option>
         <option>ACETONE 25 LITER</option>
         <option>FORMALDEHYDE SOLUTION MIN 37% 2.5L</option>
+
+        <!-- Indicators -->
         <option>4-AMINO-3-HYDROXYL-1-NAPTHALINSULFONIC ACID</option>
         <option>BARIUM DIPHENYLAMINE SULFONIC INDICATOR, 0.2%</option>
         <option>FERRIC INDICATOR SOLUTION</option>
         <option>BROMOCRESOL GREEN SOLN. 0.2G/100ML</option>
         <option>4% PHENOLPHTHALEIN 4G/100ML</option>
+
+        <!-- Peroxides & Oxidizers -->
         <option>HYDROGEN PEROXIDE 3%</option>
         <option>HYDROGEN PEROXIDE 30% 1 LITER</option>
         <option>HYDROGEN PEROXIDE 30%</option>
         <option>POTTASIUM PERMANGANATE</option>
         <option>SODIUM HYPOCHLORITE SOLUTION 15%</option>
+
+        <!-- Standards & Elements -->
         <option>LEAD STANDARD, 1000PPM</option>
         <option>TIN STANDARD, 1000PPM</option>
         <option>MANGANESE STANDARD, 1000PPM</option>
-        <option>CALCIUM, 1000PPM</option>
+        <option>CALCIUM,1000PPM</option>
         <option>CADMIUM, 1000PPM</option>
         <option>ALUMINIUM, 1000PPM</option>
         <option>MANGANESE, 1000PPM</option>
@@ -240,13 +245,15 @@
         <option>SILICON, 1000PPM</option>
         <option>NICKEL, 1000PPM</option>
         <option>SODIUM, 1000PPM</option>
-        <option>COPPER, 1000PPM</option>
+        <option>COPPER,1000PPM</option>
         <option>PHOSPOROUS, 1000PPM</option>
         <option>SELENIUM, 1000PPM</option>
         <option>TIN, 1000PPM</option>
         <option>ZIRCONIUM, 1000PPM</option>
         <option>MAGNESIUM, 1000PPM</option>
-        <option>AU, AG, CU, ZN, NI, FE 100PPM</option>
+        <option>AU,AG,CU,ZN,NI,FE 100PPM</option>
+
+        <!-- Others (original) -->
         <option>AMMONIA SOLUTION 25% 2.5LITER</option>
         <option>POLYETHOXY CHAIN</option>
         <option>PYRIDINE 2.5 LITTER</option>
@@ -255,6 +262,8 @@
         <option>DICHLOROMETHANE 2.5L</option>
         <option>ETHYLENE GLYEOL 2.5 L</option>
         <option>3,5,5-TRIMETHYL-1-HEXANOL TECHN 85%</option>
+
+        <!-- Cleaning -->
         <option>Baldi</option>
         <option>Bahan Pencuci (Jenis serbuk)</option>
         <option>Bahan Pencuci (Cecair)</option>
@@ -263,24 +272,34 @@
         <option>Tuala Good Morning</option>
         <option>Plastic sampah</option>
         <option>Mop</option>
+
+        <!-- PPE -->
         <option>Apron plastik</option>
         <option>Sarung tangan getah kuning</option>
         <option>Eye wash</option>
+
+        <!-- Brushes -->
         <option>Berus M.G Chemical</option>
         <option>Copper wire brush (tembaga)</option>
         <option>Brass wire brush</option>
         <option>Justman brush</option>
         <option>Berus Cat (Catherine Brush)</option>
         <option>Horse hair Brush</option>
+
+        <!-- Lab -->
         <option>Spatula lab</option>
         <option>Spatula straight edged</option>
         <option>Sample Boat</option>
         <option>Bulat Clay</option>
         <option>Fisher brand Beaker tongs safety</option>
         <option>Bulb Pipette 30ml</option>
+
+        <!-- Stickers -->
         <option>Stiker Putih Pendaftaran Sampel MBA</option>
         <option>Stiker Riben</option>
         <option>Stiker Bulat</option>
+
+        <!-- Other Equipment -->
         <option>Mini Drawer</option>
         <option>Tayar Troli</option>
         <option>Pemetik api</option>
@@ -292,6 +311,7 @@
     </div>
   </div>
 </div>
+
 
 
       <div class="field">
@@ -466,8 +486,6 @@
     </script>
   </body>
 </html>
-
-
 
 
 
