--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
           <select name="Nama_Pengguna" required>
             <option value="">-- Sila Pilih Nama Pengguna --</option>
             <option>MOHAMAD ASWANDI BIN ARIFF</option>
-            <option>MOHD FUZI BIN HASHIM (KU)</option>
-            <option>MOHD FAHAMI BIN ABAS (KU)</option>
+            <option>MOHD FUZI BIN HASHIM</option>
+            <option>MOHD FAHAMI BIN ABAS</option>
             <option>PASUPATI A/L SUBRAMANIAM</option>
             <option>SHARIZAN BIN IBRAHIM</option>
             <option>AZRUL BIN ARIFFIN</option>
@@ -566,3 +566,4 @@
   </script>
 </body>
 </html>
+
