--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <option>MOHAMAD HANIF BIN MUSLIMAN</option>
             <option>MOHD EZRULFAZLY BIN LEMAN</option>
             <option>FARAH NADIRAH BINTI SHALUDIN</option>
+             <option>NUR AFINI BINTI ISMAIL</option>
           </select>
         </div>
       </div>
@@ -538,3 +539,4 @@
   </script>
 </body>
 </html>
+
